--- a/src/index.html
+++ b/src/index.html
@@ -30,94 +30,7 @@
         <!-- END header -->
 
         <!-- BEGIN main -->
-        <main class="js-main main">
-
-            <!-- BEGIN user -->
-            <article class="user">
-
-                <div class="user__main">
-                    <header class="user__info">
-                        <h2 class="user__title">Bret</h2>
-                        <p class="user__email">Sincere@april.biz</p>
-                    </header>
-                    <button class="js-user-toggle btn-toggle user__btn-toggle" title="Показать альбомы пользователя">
-                        <img src="images/icon-arrow-down.svg" width="24" height="24" alt="" aria-hidden="true">
-                    </button>
-                </div>
-
-                <div class="user__albums">
-                    <h3 class="user__albums-title">Альбомы:</h3>
-
-                    <!-- BEGIN album -->
-                    <div class="album user__album">
-                        <div class="album__main">
-                            <h3 class="album__title">Lorem, ipsum dolor</h3>
-                            <button class="js-album-toggle btn-toggle-sm album__btn-toggle" title="Показать альбомы пользователя">
-                                <img src="images/icon-arrow-down.svg" width="16" height="16" alt="" aria-hidden="true">
-                            </button>
-                        </div>
-
-                        <!-- BEGIN gallery -->
-                        <div class="album__gallery">
-
-                            <figure class="album__photo photo">
-                                <button class="photo__btn-favorite">
-                                    <img src="images/icon-star-grey.svg" width="20" height="20" alt="" aria-hidden="true">
-                                </button>
-                                <img src="https://via.placeholder.com/600/14ba42" alt="et qui rerum">
-                            </figure>
-
-                            <figure class="album__photo photo">
-                                <button class="photo__btn-favorite">
-                                    <img src="images/icon-star.svg" width="20" height="20" alt="" aria-hidden="true">
-                                </button>
-                                <img src="https://via.placeholder.com/600/14ba42" alt="et qui rerum">
-                            </figure>
-
-                            <figure class="album__photo photo">
-                                <button class="photo__btn-favorite">
-                                    <img src="images/icon-star-grey.svg" width="20" height="20" alt="" aria-hidden="true">
-                                </button>
-                                <img src="https://via.placeholder.com/600/14ba42" alt="et qui rerum">
-                            </figure>
-
-                            <figure class="album__photo photo">
-                                <button class="photo__btn-favorite">
-                                    <img src="images/icon-star.svg" width="20" height="20" alt="" aria-hidden="true">
-                                </button>
-                                <img src="https://via.placeholder.com/600/14ba42" alt="et qui rerum">
-                            </figure>
-
-                            <figure class="album__photo photo">
-                                <button class="photo__btn-favorite">
-                                    <img src="images/icon-star-grey.svg" width="20" height="20" alt="" aria-hidden="true">
-                                </button>
-                                <img src="https://via.placeholder.com/600/14ba42" alt="et qui rerum">
-                            </figure>
-
-                        </div>
-                        <!-- END gallery -->
-
-                    </div>
-                    <!-- END album -->
-
-                    <!-- BEGIN album -->
-                    <div class="album user__album">
-                        <div class="album__main">
-                            <h3 class="album__title">Lorem, ipsum dolor</h3>
-                            <button class="js-album-toggle btn-toggle-sm album__btn-toggle" title="Показать альбомы пользователя">
-                                <img src="images/icon-arrow-down.svg" width="16" height="16" alt="" aria-hidden="true">
-                            </button>
-                        </div>
-                    </div>
-                    <!-- END album -->
-
-                </div>
-
-            </article>
-            <!-- END user -->
-
-        </main>
+        <main class="js-main main"></main>
         <!-- END main -->
 
     </div>
