Add pop-up by click to every image

--- a/src/index.html
+++ b/src/index.html
@@ -11,27 +11,31 @@
 
 <body>
 
-    <div class="wrapper">
+    <div id="app">
 
-        <!-- BEGIN header -->
-        <header class="header">
-            <h1 class="header__title">Photolog</h1>
-            <nav class="header__nav">
-                <ul class="header__nav-list">
-                    <li class="header__item">
-                        <button type="button" class="js-catalog-btn header__link">Каталог</button>
-                    </li>
-                    <li class="header__item">
-                        <button type="button" class="js-favorites-btn header__link">Избранное</button>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <!-- END header -->
+        <div class="wrapper js-wrapper">
 
-        <!-- BEGIN main -->
-        <main class="js-main main"></main>
-        <!-- END main -->
+            <!-- BEGIN header -->
+            <header class="header">
+                <h1 class="header__title">Photolog</h1>
+                <nav class="header__nav">
+                    <ul class="header__nav-list">
+                        <li class="header__item">
+                            <button type="button" class="js-catalog-btn header__link">Каталог</button>
+                        </li>
+                        <li class="header__item">
+                            <button type="button" class="js-favorites-btn header__link">Избранное</button>
+                        </li>
+                    </ul>
+                </nav>
+            </header>
+            <!-- END header -->
+
+            <!-- BEGIN main -->
+            <main class="js-main main"></main>
+            <!-- END main -->
+
+        </div>
 
     </div>
 
