Add clickable 'Catalog' and 'Favorite' links

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
                 <nav class="header__nav">
                     <ul class="header__nav-list">
                         <li class="header__item">
-                            <button type="button" class="js-catalog-btn header__link">Каталог</button>
+                            <button type="button" class="js-catalog-btn header__link active">Каталог</button>
                         </li>
                         <li class="header__item">
                             <button type="button" class="js-favorites-btn header__link">Избранное</button>
