--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
     <div id="app">
 
-        <div class="wrapper js-wrapper">
+        <div class="js-wrapper wrapper">
 
             <!-- BEGIN header -->
             <header class="header">
